add resources + change guidelines on exercises completion

--- a/notebooks/W2E_Pipelines_Sentence_Transformers.ipynb
+++ b/notebooks/W2E_Pipelines_Sentence_Transformers.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "The goal of this notebook is to make you practice with some pipeline use-cases and to introduce the [Sentence Transformers](https://sbert.net/) in the context of a concrete example of semantic search and question answering (relevant to the Open-book Question Answering final project).\n",
     "\n",
-    "Exercises 1 and 2 of this notebook are mandatory and will be part of your first graded portfolio. Exercise 3 is optional, but we highly recommend you to complete it, especially if you're interested in the Open-book Question Answering final project."
+    "> ⚠️ **NOTE**: We warmly recommend completing the whole notebook, however only some exercises will be graded. See details on *Brightspace > Assignments*\n"
    ]
   },
   {
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (Optional) Exercise 3: SentenceTransformers for Semantic Similarity Search"
+    "## Exercise 3: SentenceTransformers for Semantic Similarity Search"
    ]
   },
   {
