--- a/notebooks/W3E_BPE_Transduction.ipynb
+++ b/notebooks/W3E_BPE_Transduction.ipynb
@@ -44,7 +44,7 @@
         "\n",
         "You will start by exploring the impact of different vocabulary sizes on a subword tokenizer using the Tokenizers library, and how these can be imported and used with spaCy. Finally, you will be asked to train a small transformer model to perform transduction from feminine to masculine words.\n",
         "\n",
-        "Exercise 1 is mandatory and will be part of your graded midterm portfolio. Exercise 2 is optional, but we highly recommend you to complete it, especially if you're interested in the \"Modern Neural Networks meet Linguistic Theory\" final project.\n",
+        "> ⚠️ **NOTE**: We warmly recommend completing the whole notebook, however only some exercises will be graded. See details on *Brightspace > Assignments*\n",
         "\n",
         "## Exercise 1: Byte Pair Encoding with Huggingface Tokenizers\n",
         "\n",
@@ -258,37 +258,48 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Exercise 2: Tokenization in different languages"
-      ],
       "metadata": {
         "id": "8amBXhXgJZhR"
-      }
+      },
+      "source": [
+        "## Exercise 2: Tokenization in different languages"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Most tokenizers we have seen so far are trained on English data. They often work reasonably well for the English language, but what about other languages? A major issue in multilingual Large LMs is that their shared subword vocabulary favors high-resource languages at the cost of the low-resource ones."
-      ],
       "metadata": {
         "id": "R6FgA7b3J4Qt"
-      }
+      },
+      "source": [
+        "Most tokenizers we have seen so far are trained on English data. They often work reasonably well for the English language, but what about other languages? A major issue in multilingual Large LMs is that their shared subword vocabulary favors high-resource languages at the cost of the low-resource ones."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "JxTevTdhMxYT"
+      },
       "source": [
         "To understand this problem, you can run different subword tokenizers on translations of the same sentence in different languages.\n",
         "\n",
         "Below, the first tokenizer belongs to the *multilingual* BLOOM model ([BLOOM](https://huggingface.co/bigscience/bloom)) which was trained on a mix of more than 40 languages. While model developers strived to balance the amount of different languages in the dataset, the distribution remains strongly uneven with most data being in English, followed by Chinese and French ([https://huggingface.co/bigscience/bloom#training-data]). This imbalance is even stronger in newer, larger LMs.\n",
         "\n",
-        "The second tokenizer instead was trained on a 100mb-sized *monolingual* corpus ([GoldfishLM-NLD](https://huggingface.co/goldfish-models/nld_latn_100mb)). This is a much smaller corpus than the previous one, but contains only text in one language."
-      ],
-      "metadata": {
-        "id": "JxTevTdhMxYT"
-      }
+        "The second tokenizer instead was trained on a 100mb-sized *monolingual* corpus ([GoldfishLM-NLD](https://huggingface.co/goldfish-models/nld_latn_100mb)). This is a much smaller corpus than the previous one, but contains only text in one language.\n",
+        "\n",
+        "\n",
+        "Recent work has investigated whether some languages are inherently harder to model than others and how different factors may affects model performance. See, for example:\n",
+        "\n",
+        "- [Khorrami et al., 2024](https://arxiv.org/abs/2411.14198) – Examining the impact of multilingual training data distribution on model quality across languages.  \n",
+        "- [Li et al., 2025](https://aclanthology.org/2025.emnlp-main.369/) – Analyzing language-specific modeling difficulty in large-scale language models."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7utPbqPeltZl"
+      },
+      "outputs": [],
       "source": [
         "# Import the three different types of tokenizers\n",
         "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
@@ -300,15 +311,15 @@
         "# (Here English and Dutch but many more Goldifh models are available!)\n",
         "tokenizer_eng = AutoTokenizer.from_pretrained(\"goldfish-models/eng_latn_100mb\")\n",
         "tokenizer_nld = AutoTokenizer.from_pretrained(\"goldfish-models/nld_latn_100mb\")\n"
-      ],
-      "metadata": {
-        "id": "7utPbqPeltZl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "ZqK4tNd_mAsL"
+      },
+      "outputs": [],
       "source": [
         "# Here are 4 sentences taken from Flores-200 dataset (https://github.com/facebookresearch/flores).\n",
         "# These dataset contains translations of the same sentences in 200 languages\n",
@@ -326,15 +337,15 @@
         "    'De 28-jaar oude Vidal is drie seizoenen geleden van Sevilla naar Barça overgestapt.',\n",
         "    'Sinds hij verhuisde naar de Catalaanse hoofdstad heeft hij 49 wedstrijden gespeeld voor de club.'\n",
         "    ]"
-      ],
-      "metadata": {
-        "id": "ZqK4tNd_mAsL"
-      },
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "E7L-zLmmmHZb"
+      },
+      "outputs": [],
       "source": [
         "for sentences,tokenizer_mono in zip([sentences_eng, sentences_nld],\n",
         "                                    [tokenizer_eng, tokenizer_nld]):\n",
@@ -353,15 +364,13 @@
         "    # TODO: include the length results in your analysis\n",
         "    print(len(subwords_bloom), len(subwords_mono))\n",
         "    print()"
-      ],
-      "metadata": {
-        "id": "E7L-zLmmmHZb"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "yZo8O1Pvmdih"
+      },
       "source": [
         "EXERCISE:\n",
         "\n",
@@ -378,10 +387,7 @@
         "Note: In a given language, a large difference between the multilingual tokenizer’s subword count and that of the corresponding monolingual tokenizer can be taken as a proxy of the underperformance of the multilingual tokenizer.\n",
         "\n",
         "[*Provide the counts in an easy-to-read format, by adding a short text to explain how you chose the languages.*]\n"
-      ],
-      "metadata": {
-        "id": "yZo8O1Pvmdih"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -389,7 +395,7 @@
         "id": "MkrqDqVLEyQq"
       },
       "source": [
-        "## [Optional] Exercise 3: Lexicon-based Transduction System\n",
+        "## Exercise 3: Lexicon-based Transduction System\n",
         "\n",
         "In this exercise you will build a rule-based tool to transduce a given input text **from masculine to feminine**. You are provided with a list of pairs including feminine words and their masculine counterparts. To create a rule based transducer, the following components will be needed:\n",
         "\n",
@@ -589,6 +595,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "interpreter": {
       "hash": "f9f85d98b63f393548f3009c8d52d8286e609a1467b1184fe464fb700873fbd3"
     },
@@ -608,12 +619,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.10.9"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
