--- a/notebooks/W4E_NonTextual_Information.ipynb
+++ b/notebooks/W4E_NonTextual_Information.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "8. Obtain insights about salient words and features for the prediction task.\n",
     "\n",
-    "Every operation to be completed is marked with a `TODO` comment in the code section. While these represent a small but nonetheless comprehensive set of steps to train models on textual and non-textual information, nowadays NLP practitioners operate mainly with pre-trained word embeddings for representing textual information. \n"
+    "> ⚠️ **NOTE**: We warmly recommend completing the whole notebook, however only some exercises will be graded. See details on *Brightspace > Assignments*\n"
    ]
   },
   {
@@ -286,7 +286,12 @@
    "source": [
     "### Representing Text\n",
     "\n",
-    "Now that you have a more compact representation of the text, the next step is converting it into a vector representation. For this purpose, you will use the [`TfidfVectorizer`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html) class provided by Scikit-learn. This class converts a collection of text documents to a matrix of [TF-IDF scores](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) reflecting the importance of a word in a document, and in relation to the full corpus. We are going to set some parameters to ensure a limited size of the vocabulary, but you can experiment with other values."
+    "Now that you have a more compact representation of the text, the next step is converting it into a vector representation. For this purpose, you will use the [`TfidfVectorizer`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html) class provided by Scikit-learn. This class converts a collection of text documents to a matrix of [TF-IDF scores](https://en.wikipedia.org/wiki/Tf%E2%80%93idf) reflecting the importance of a word in a document, and in relation to the full corpus. We are going to set some parameters to ensure a limited size of the vocabulary, but you can experiment with other values.\n",
+    "\n",
+    "For additional guidance on TF-IDF, you can explore these resources:\n",
+    "\n",
+    "- [Written tutorial on Kaggle](https://www.kaggle.com/code/paulrohan2020/tf-idf-tutorial)\n",
+    "- [YouTube video tutorial](https://www.youtube.com/watch?v=ATK6fm3cYfI)"
    ]
   },
   {
@@ -500,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (Optional) Exercise 2: Better Text Features for Wine Scoring\n",
+    "# Exercise 2: Better Text Features for Wine Scoring\n",
     "\n",
     "In this exercise, you will repeat the same procedure of the previous exercise, but you will use a pre-trained transformer model via the Huggingface Transformers library instead of the TfidfVectorizer.\n",
     "\n",
