--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# Run in Colab to install local packages\n",
-    "!pip install transformers sentencepiece torch datasets"
+    "!pip install transformers==4.28.1 sentencepiece torch datasets"
    ]
   },
   {
