--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "> Python version compatibility: Colab typically runs the latest Python (currently 3.12+), and some older ML packages don’t provide prebuilt wheels for that version, which can lead to install/build errors.\n",
     "\n",
-    "> Workaround: switch your notebook to a past runtime that uses Python 3.11. Colab supports selecting past “Runtime Versions” specifically to avoid breakages from core upgrades like Python.\n",
+    "Workaround: switch your notebook to a past runtime that uses Python 3.11. Colab supports selecting past “Runtime Versions” specifically to avoid breakages from core upgrades like Python.\n",
     "\n",
-    "> Action required in Colab: `Runtime → Change runtime type → Runtime version → select 2025.07 (this runtime version corresponds to Python 3.11)`."
+    "Action required in Colab: `Runtime → Change runtime type → Runtime version → select 2025.07 (this runtime version corresponds to Python 3.11)`."
    ]
   },
   {
