--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Python version compatibility: Colab typically runs the latest Python (currently 3.12+), and some older ML packages don’t provide prebuilt wheels for that version, which can lead to install/build errors.\n",
-    "Workaround: switch your notebook to a past runtime that uses Python 3.11. Colab supports selecting past “Runtime Versions” specifically to avoid breakages from core upgrades like Python.\n",
-    "Action required in Colab: `Runtime → Change runtime type → Runtime version → select 2025.07 (this runtime version corresponds to Python 3.11)`."
+    ">[!TIP]\n",
+    "> Python version compatibility: If you are running with Colab, it typically runs the latest Python (currently 3.12+), and some older ML packages don’t provide prebuilt wheels for that version, which can lead to install/build errors.\n",
+    "> Actions required in Colab: Switch your notebook to a past runtime that uses Python 3.11. `Runtime → Change runtime type → Runtime version → select 2025.07 (this runtime version corresponds to Python 3.11)`."
    ]
   },
   {
