--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -11,9 +11,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> *Python version compatibility*: If you are running with Colab, it typically runs the latest Python (currently 3.12+), and some older ML packages don’t provide prebuilt wheels for that version, which can lead to install/build errors.\n",
+    "# Before we start"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Python version compatibility (Colab)**: Colab typically runs the newest Python release (currently **3.12+**). Some older ML packages may not publish prebuilt wheels for the latest version, which can trigger install failures or source-build errors during `pip install`.\n",
     "\n",
-    "> *Actions required in Colab*: Switch your notebook to a past runtime that uses Python 3.11. `Runtime → Change runtime type → Runtime version → select 2025.07 (this runtime version corresponds to Python 3.11)`."
+    "**What to do in Colab**: Switch the notebook to a runtime that uses **Python 3.11**.  \n",
+    "Go to `Runtime → Change runtime type → Runtime version → select '2025.07'` (this runtime version corresponds to **Python 3.11**)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can smoothly install the following packages:"
    ]
   },
   {
@@ -22,17 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run in Colab to install local packages\n",
-    "!pip install sentencepiece torch datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install transformers==4.28.1"
+    "# Run in Colab to install packages\n",
+    "!pip install transformers==4.28.1 sentencepiece torch datasets"
    ]
   },
   {
