--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "classifier = pipeline(\"sentiment-analysis\")\n",
+    "classifier = pipeline(\"sentiment-analysis\", framework=\"pt\")\n",
     "classifier(\"I've been waiting for the IK-NLP course for my whole life.\")"
    ]
   },
