--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "generator = pipeline(\"text-generation\", model=\"GroNLP/gpt2-small-dutch\")\n",
+    "generator = pipeline(\"text-generation\", model=\"GroNLP/gpt2-small-dutch\", framework=\"pt\")\n",
     "generator(\n",
     "    \"Het doel van de cursus is ervoor te zorgen dat studenten bekend zijn met een aantal \"\n",
     "    \"fundamentele technieken en algoritmen op het gebied van natuurlijke taalverwerking, zoals:\"\n",
@@ -313,7 +313,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "unmasker = pipeline(\"fill-mask\")\n",
+    "unmasker = pipeline(\"fill-mask\", framework=\"pt\")\n",
     "unmasker(\"This course will teach you all about <mask> language processing models.\", top_k=3)"
    ]
   },
@@ -354,7 +354,7 @@
     "# The same result can be achieved using the `summarization` pipeline.\n",
     "from transformers import pipeline\n",
     "\n",
-    "summarizer = pipeline(\"text2text-generation\", model=\"sshleifer/distilbart-cnn-12-6\")\n",
+    "summarizer = pipeline(\"text2text-generation\", model=\"sshleifer/distilbart-cnn-12-6\", framework=\"pt\")\n",
     "summarizer(\n",
     "    \"\"\"\n",
     "    America has changed dramatically during recent years. Not only has the number of \n",
@@ -400,7 +400,7 @@
     "# The same result can be achieved using the `translation` pipeline.\n",
     "from transformers import pipeline\n",
     "\n",
-    "translator = pipeline(\"text2text-generation\", model=\"Helsinki-NLP/opus-mt-fr-en\")\n",
+    "translator = pipeline(\"text2text-generation\", model=\"Helsinki-NLP/opus-mt-fr-en\", framework=\"pt\")\n",
     "translator(\"Ce laboratoire a été adapté à partir du cours originel par HuggingFace.\")"
    ]
   },
