--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -38,7 +38,16 @@
    "outputs": [],
    "source": [
     "# Run in Colab to install packages\n",
-    "!pip install transformers==4.28.1 sentencepiece torch datasets"
+    "!pip install transformers==4.28.1 sentencepiece torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -U datasets\n"
    ]
   },
   {
