--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# Run in Colab to install packages\n",
-    "!pip install transformers==4.28.1 sentencepiece torch"
+    "!pip install -q transformers==4.28.1 sentencepiece torch"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U datasets\n"
+    "!pip install -qU datasets\n"
    ]
   },
   {
