fix version issue

--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -38,16 +38,8 @@
    "outputs": [],
    "source": [
     "# Run in Colab to install packages\n",
-    "!pip install -q transformers==4.28.1 sentencepiece torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -qU datasets\n"
+    "!pip install transformers==4.28.1 sentencepiece torch\n",
+    "!pip install -U datasets"
    ]
   },
   {
