--- a/notebooks/W1T_Intro_Transformers_Datasets.ipynb
+++ b/notebooks/W1T_Intro_Transformers_Datasets.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "from transformers import pipeline\n",
     "\n",
-    "generator = pipeline(\"text-generation\", framework=\"pt\")\n",
+    "generator = pipeline(\"text-generation\")\n",
     "generator(\n",
     "    \"The goal of the course is to ensure that students are familiar with a number of fundamental \"\n",
     "    \"techniques and algorithms in the area of natural language processing, such as: \"\n",
