--- a/notebooks/W2T_Transformers_Architecture.ipynb
+++ b/notebooks/W2T_Transformers_Architecture.ipynb
@@ -2,15 +2,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/InCLow/gsarti/ik-nlp-tutorials/blob/main/notebooks/W2T_Transformers_Architecture.ipynb)"
+      ],
+      "metadata": {
+        "id": "mtPRQ_Y9lj8Z"
+      },
+      "id": "mtPRQ_Y9lj8Z"
+    },
+    {
+      "cell_type": "markdown",
       "id": "705191be",
       "metadata": {
         "id": "705191be"
       },
       "source": [
-        "> **This is a notebook on implementation details of Transformers architectures adapted from the [Harvard NLP course](https://nlp.seas.harvard.edu/annotated-transformer/). Thanks to [Jirui Qi](https://betswish.github.io/) for taking charge of the edition job.**\n",
+        "**This is a notebook on implementation details of Transformers architectures adapted from the [Harvard NLP course](https://nlp.seas.harvard.edu/annotated-transformer/). Thanks to [Jirui Qi](https://betswish.github.io/) for taking charge of the edition job.**\n",
         "\n",
-        "> If you aren't / used to be familiar with Transformers, here is a nice channel helping you recall the knowledge\n",
-        ":https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi\n",
+        "> 💡 **If you aren't / used to be familiar with Transformers, here is a nice channel helping you recall the knowledge:\n",
+        "https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi**\n",
         "\n",
         "# Transformers, from scratch (a simplified notebook)\n",
         "\n",
@@ -46,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": null,
       "id": "dfb311fe",
       "metadata": {
         "colab": {
@@ -148,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 251,
+      "execution_count": null,
       "id": "c3737578",
       "metadata": {
         "colab": {
@@ -256,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 252,
+      "execution_count": null,
       "id": "8caefade",
       "metadata": {
         "colab": {
@@ -302,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 253,
+      "execution_count": null,
       "id": "01f0e3ab",
       "metadata": {
         "colab": {
@@ -363,7 +373,7 @@
         "outputId": "19e3cb0f-0fa6-4fd7-f17c-7c7c72cff54d"
       },
       "id": "xFkYEbld6hgi",
-      "execution_count": 254,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -418,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 255,
+      "execution_count": null,
       "id": "d609a5bd",
       "metadata": {
         "colab": {
@@ -481,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 256,
+      "execution_count": null,
       "id": "ef1fd71f",
       "metadata": {
         "colab": {
@@ -518,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": null,
       "id": "1fa30cd3",
       "metadata": {
         "colab": {
@@ -587,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": null,
       "id": "f3e4bfd6",
       "metadata": {
         "colab": {
@@ -652,7 +662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": null,
       "id": "7662b060",
       "metadata": {
         "colab": {
@@ -743,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": null,
       "id": "a3129559",
       "metadata": {
         "colab": {
@@ -803,7 +813,7 @@
         "outputId": "2031fe1a-d30d-4db4-b322-aed5e18086e5"
       },
       "id": "QYUWdcjVPzQP",
-      "execution_count": 261,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -841,7 +851,7 @@
         "outputId": "cba26b3e-60dc-45b8-dec6-0f893ae51c92"
       },
       "id": "shrV_a-QPnJx",
-      "execution_count": 262,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -888,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 263,
+      "execution_count": null,
       "id": "dc121549",
       "metadata": {
         "colab": {
@@ -957,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 264,
+      "execution_count": null,
       "id": "2861ba0c",
       "metadata": {
         "colab": {
@@ -1036,7 +1046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": null,
       "id": "29f8182d",
       "metadata": {
         "id": "29f8182d"
@@ -1133,7 +1143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": null,
       "id": "abc8f07b",
       "metadata": {
         "colab": {
@@ -1211,7 +1221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 267,
+      "execution_count": null,
       "id": "72690442",
       "metadata": {
         "colab": {
@@ -1259,7 +1269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 268,
+      "execution_count": null,
       "id": "bd91dd93",
       "metadata": {
         "colab": {
