--- a/notebooks/W3T_Transformers_Generation.ipynb
+++ b/notebooks/W3T_Transformers_Generation.ipynb
@@ -481,6 +481,7 @@
     "    max_length=50,\n",
     "    penalty_alpha=0.6,\n",
     "    top_k=4,\n",
+    "    trust_remote_code=True",
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * '-')\n",
